# Exchange_rate_Privat

./: README.md  ex_privat.py  index.html  main.css  main.js  my_server.py  pyproject.toml  table.css
my_lib/: my_date.py
templates/: exchanges.html
