[tool.poetry]
name = "async-exhange-rate-private"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.8.6"
websockets = "^11.0.3"
faker = "^19.10.0"
names = "^0.3.0"
prettytable = "^3.9.0"
jinja2 = "^3.1.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
